@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.1038 2009-09-30 10:38:13 mb Exp $
+# $Id: CHANGES,v 1.1039 2009-09-30 10:47:06 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -31,6 +31,8 @@
  - (2009/09/15) Improved performance of the PDF backend.
 
 2.4.5 (2009/??/??)
+  - (2009/09/30) Fixed bug#4338 - Enhancement: Be able to disable customer
+     feature of customer_id to have access to all ticket with same customer id.
  - (2009/09/30) Fixed bug#4358 - Unable to insert inline images in customer
     frontend if WebUploadCacheModule is set to "FS".
  - (2009/09/30) Fixed bug#4355 - SLA dropdown does not populate in
